--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,26 @@
 spring.application.name=online_laundry_service
-spring.datasource.url=jdbc:mysql://localhost:3306/laundry_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=laundry_user
-spring.datasource.password=StrongPass123
 
+# ===========================
+# DATABASE CONFIG (RAILWAY)
+# ===========================
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===========================
+# JPA / HIBERNATE
+# ===========================
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-app.jwt.secret=THIS_IS_A_VERY_LONG_RANDOM_SECRET_KEY_1234567890_ABCDEF
+
+# ===========================
+# SECURITY / JWT
+# ===========================
+app.jwt.secret=${JWT_SECRET}
+
+# ===========================
+# SERVER PORT (Railway)
+# ===========================
+server.port=${PORT:8080}
