--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # ===========================
 # SECURITY / JWT
 # ===========================
-app.jwt.secret=${JWT_SECRET}
+app.jwt.secret=${THIS_IS_A_VERY_LONG_RANDOM_SECRET_KEY_1234567890_ABCDEF}
 
 # ===========================
 # SERVER PORT (Railway)
