--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,9 @@ spring.application.name=online_laundry_service
 
 # ===========================
 # DATABASE CONFIG (RAILWAY)
+# Using the single URL provided by Railway
 # ===========================
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.url=${MySQL_MYSQL_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===========================
