--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=online_laundry_service
 # DATABASE CONFIG (RAILWAY)
 # Using the single URL provided by Railway
 # ===========================
-spring.datasource.url=${MySQL_MYSQL_URL}
+spring.datasource.url=jdbc:${MySQL_MYSQL_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===========================
